Fixed CodeMirror overflow bug

--- a/sagenb/data/sage/less/cell.less
+++ b/sagenb/data/sage/less/cell.less
@@ -121,7 +121,7 @@ body.single_cell_mode {
 			overflow-y: auto;
 			overflow-x: auto;
 			width: 100%;
-			max-height: 350px;
+			/*max-height: 350px;*/
 		}
 
 		.CodeMirror-gutter-text {
